--- a/.github/workflows/colt.yml
+++ b/.github/workflows/colt.yml
@@ -20,6 +20,7 @@ jobs:
                 from: ontologies/
                 to: ontologies/out
                 package_name: ColtTest
+                namespace: Rdf.Colt
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
