--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,10 @@ inputs:
     description: "The name of the code library package generated."
     required: true
     default: "OntologyLibrary"
+  namespace:
+    description: ""
+    required: false
+    default: "Auto.Ontology"
 runs:
   using: "docker"
   image: "Dockerfile"
