--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ inputs:
   package_name:
     description: "The name of the code library package generated."
     required: false
-    default: "OntologyLibrary"
+    default: None
   namespace:
     description: "The namespace for the C# project generated."
     required: false
